stylesheets/styles.css
body{
    height : 100vh;
    background: rgb(2,0,36);
    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(21,21,215,1) 27%, rgba(6,78,158,1) 60%, rgba(0,212,255,1) 100%);
}
.board{
    background : white;
}
#tools button , .menuBtn{
    box-shadow:inset 0px 1px 0px 0px #bbdaf7;
	background:linear-gradient(180deg, rgba(6,78,158,1) 5%, rgb(61, 135, 219) 100%);
	background-color:#338be2;   
	border-radius:6px;
	border:1px solid #04284d;
	cursor:pointer;
	color:#ffffff;
	font-size:15px;
	font-weight:bold;
	padding:6px 24px;
	text-decoration:none;
	text-shadow:0px 1px 0px #528ecc;
}
.keyboard button{
    box-shadow: 0px 5px 5px -3px rgb(61, 135, 219);
	background-color:rgb(98, 200, 231);
	border-radius:4px;
	cursor:pointer;
    color:#ffffff;
    text-shadow:0px 1px 0px #3d768a;
    border : 2px solid rgba(39, 36, 36, 0.5);
}
#ui-messages{
    font-weight: bold;
    letter-spacing: 1px;
    font-family: monospace;
    color : white;
}
@media screen and (orientation: landscape){
    #ui-messages{
        font-size : 16px;
    }
}
@media screen and (orientation: portrait){
    #ui-messages{
        font-size : 20px;
    }
}
.fixed{
    font-weight: bold;
    color: rgba(43, 42, 42, 0.795);
}
input,button{
    outline: none;
}
.selected{
    border: 4px solid gold;
    border-radius: 5px;
}
@media screen and (min-width: 320px) and (max-width: 767px){
    .selected{
        border: 1.5px solid gold;
    }
}

